# vorotest

./: CMakeLists.txt  README.md  conf.gro  reader_voro_file.cpp  traj_comp.xtc
include/: Gromacs.h
src/: cell.cc  v_base.cc  voro++.cc
